# SolanaMarket

./: README.md
frontend/: config-overrides.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
frontend/src/components/nft/: NFTCard.tsx  NFTGrid.tsx
frontend/src/components/search/: SearchBar.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: useWalletConnection.ts
frontend/src/pages/collections/: CollectionDetailPage.tsx  CollectionsPage.tsx
frontend/src/pages/create/: CreateNFTPage.tsx
frontend/src/pages/errors/: NotFoundPage.tsx
frontend/src/pages/explore/: ExplorePage.tsx
frontend/src/pages/home/: HomePage.tsx
frontend/src/pages/nft/: NFTDetailPage.tsx
frontend/src/pages/profile/: ProfilePage.tsx
frontend/src/pages/search/: SearchResultsPage.tsx
frontend/src/services/: apolloClient.ts  biddingService.ts  collectionService.ts  nftService.ts
server/: .env  package-lock.json  package.json  tsconfig.json
server/src/: index.ts  tsconfig.json
server/src/config/: database.ts
server/src/graphql/: resolvers.ts  schema.ts
server/src/models/: Bid.ts  Collection.ts  NFT.ts  Offer.ts  Transaction.ts  User.ts  index.ts
server/src/services/: BidService.ts  NFTService.ts  OfferService.ts  index.ts
server/src/types/: context.ts
server/src/utils/: logger.ts
smart-contracts/: Anchor.toml
smart-contracts/programs/nft-marketplace/: Cargo.toml
smart-contracts/programs/nft-marketplace/src/: lib.rs
(+5 files in other folders)
