[package]
name = "nft-marketplace"
version = "0.1.0"
description = "Solana NFT Marketplace Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.12"
mpl-token-metadata = { version = "1.8.3", features = ["no-entrypoint"] }
